StudyList/packagetuff/mdapipkg/unpackaged/unpackaged/objects/StudyCard__c.object
<CustomObject>
    <fields>
        <fullName>ArticuleUrl__c</fullName>
        <label>ArticuleUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IndexInPipeline__c</fullName>
        <label>IndexInPipeline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StudyList__c</fullName>
        <label>StudyList</label>
        <referenceTo>StudyList__c</referenceTo>
        <relationshipLabel>StudyCards</relationshipLabel>
        <relationshipName>StudyCards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VideoUrl__c</fullName>
        <label>VideoUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>StudyCard</label>
    <nameField>
        <label>StudyCard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StudyCards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>